argocd/minio-app-signal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minioconsole
  namespace: gitlab
spec:
  ingressClassName: "system-ingress"
  rules:
    - host: "minio.homelab.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console  # Имя сервиса, созданного чартом MinIO для консоли
                port:
                  number: 9000  # Порт для HTTPS-консоли
